add gale-shapley offer percentage improvement

--- a/candidate-recommender.ipynb
+++ b/candidate-recommender.ipynb
@@ -32,6 +32,7 @@
     "    - [Run-time Improvements](#runtime-improvements)\n",
     "        - [Population with Assumption](#compute-matrix-v2)\n",
     "        - [Testing Matrix Population Methods](#testing-population-methods)\n",
+    "    - [Improving the percentage of offers computed](#improving-offer-pecentage)\n",
     "    - [Conclusion](#gale-shapley-conclusion)\n",
     "        \n",
     "- [K-Nearest Neighbours](#knn)\n",
@@ -2038,7 +2039,7 @@
    ],
    "source": [
     "# compute lineplots for the performance of the algorithm over a range of candidates and jobs\n",
-    "performance_data = [ run_gale_shapley(i, j, verbose=True) for j in range(25, 125, 25) for i in range(100, 1100, 100) ]"
+    "performance_data = [ run_gale_shapley(i, j, verbose=False) for j in range(25, 125, 25) for i in range(100, 1100, 100) ]"
    ]
   },
   {
@@ -2450,6 +2451,40 @@
     "To compute the entire matrix ahead, around 35-40 seconds were required. In conclusion, when we are trying to improve the time complexity (notice that the space complexity is the same across all instances, namely *O(m x n)* for *m* candidates and *n* jobs) : \n",
     "- If we are trying to populate a subsection of a matrix partially populated, it is slightly more efficient to compute the subsection based on the assumption that the previous subsection has been populated\n",
     "- If we have a lot of matching queries to execute and the maximum number of candidates and jobs is known in advance, compute the entire matrix in *O(m x n)* time and access the compatibility values in *O(1)*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e5e9a60",
+   "metadata": {},
+   "source": [
+    "<a id=\"improving-offer-pecentage\"></a>\n",
+    "## Improving the percentage of offers computed "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec4e4b1e",
+   "metadata": {},
+   "source": [
+    "Except for some edge cases, the percentage of jobs fully exhausted (i.e. all of its positions are filled) is usually less than 100%. This might be due to several factors, such as a particular job being \"banned\" from a succeeding iteration of the algorithm if no candidate was willing to accept the offer made during the current round. \n",
+    "\n",
+    "An approach which could be used to maximize the percentage of jobs assigned relies on one simple concept, for us humans at least, which is that a candidate in a competitive pool would much rather have an offer from a company which was not their first choice rather than end up with no offers at the end of the recruitment cycle due to their preferences. \n",
+    "\n",
+    "In the scope of the Gale-Shapley algorithm, this concept would be implemented through simple modifications.\n",
+    "\n",
+    "1. The *compute_compatibility(candidate, job)* function will now take in a 3rd parameter *alpha* which denotes how many attributes are included in the computation of the score. For example is *alpha* = 0, then all attributes are involved and if *alpha* = n (number of attributes) then the score output defaults to 0.0\n",
+    "\n",
+    "2. The *run_gale_shapley(...)* function will now do the following : \n",
+    "    - set *alpha* to 0\n",
+    "    - execute Gale-Shapley on the input sets\n",
+    "    - exclude the candidates and jobs members of an offer from the input sets\n",
+    "    - increase *alpha* by 1 \n",
+    "    - repeat Gale-Shapley on this filtered data set until either input set is empty (i.e. jobs = None or candidates = None).\n",
+    "    \n",
+    "With these modifications in place, a 100% offer-rate is guaranteed, since the compatibility scores of each (candidate, job) pair will eventually converge to 0.0 and the algorithm will assign the remaining entites on a first-come, first-serve basis until the stopping condition is met.\n",
+    "\n",
+    "Note however, that candidates and jobs matched in round *i* are more likely to be satisfied with their pairing than two entites matched in round *i+1* since their compatibility score is likely to be close to the one of other entities in the same input sets."
    ]
   },
   {
